# Progress_Service

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: graphql_context.py  main.py
app/core/: config.py
app/db/: session.py
app/db/migrations/: __init__.py  env.py  script.py.mako
app/db/migrations/versions/: .gitkeep
app/graphql/: mutations.py  queries.py  schema.py
app/graphql/types/: achievement.py  certificate.py  progress.py  statistics.py
app/models/: achievement.py  certificate.py  progress.py
app/schema/: learning_statistics.py
app/services/: progress_service.py
